# ZBarLib

./: README.md
app/: build.gradle
app/src/androidTest/java/com/xy/zbarlib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  decoder.c  error.h  image.h  scanner.c  symbol.c  thread.h
app/src/main/cpp/decoder/: codabar.c  code128.c  code39.c  code93.c  databar.c  ean.c  i25.c  qr_finder.c
app/src/main/cpp/libiconv/: iconv.c  iconv.h
app/src/main/cpp/qrcode/: qrdec.c  qrdec.h  qrdectxt.c
app/src/main/cpp/video/: null.c
app/src/main/cpp/window/: null.c
app/src/main/java/com/xy/zbarlib/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/xy/zbarlib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
